charts/mediaserver/requestrr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: requestrr
  labels:
    app: requestrr
spec:
  type: ClusterIP
  ports:
    - port: 4545
      targetPort: 4545
      protocol: TCP
      name: requestrr-port
  selector:
    app: requestrr
