charts/mediaserver/requestrr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: requestrr
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: requestrr.png
    gethomepage.dev/name: Requestrr
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - requestrr.int.imdevinc.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: requestrr
          namespace: mediaserver
          port: 4545
